# executors-impl

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  Makefile
examples/actor/: CMakeLists.txt  Makefile  actor_1.cpp  actor_2.cpp
examples/adapter/: CMakeLists.txt  Makefile  logging.cpp  strand.cpp
examples/async/: CMakeLists.txt  Makefile  async_3.cpp
examples/async_ops/: CMakeLists.txt  Makefile  async_op_1.cpp  async_op_2.cpp  polymorphic_async_op_1.cpp  polymorphic_async_op_2.cpp
examples/custom_thread_pool/: .gitignore  Makefile  thread_pool.cpp
examples/exception/: .gitignore  CMakeLists.txt  Makefile  bulk_twoway_reduce.cpp  bulk_twoway_reduce_vector.cpp
examples/extensions/: .gitignore  Makefile  adapted.cpp  bulk.cpp  simple.cpp
examples/for_each/: CMakeLists.txt  Makefile  for_each_1.cpp  for_each_2.cpp  for_each_3.cpp  for_each_n.hpp  for_each_n_1.cpp  for_each_n_2.cpp  for_each_n_3.cpp  for_each_n_4.cpp  for_each_n_5.cpp  noexcept_function.hpp  noexcept_iterator.hpp  par.hpp  query_or.hpp  throwing_iterator.hpp
examples/inline/: CMakeLists.txt  Makefile  inline_1.cpp  inline_2.cpp  inline_3.cpp  inline_4.cpp  inline_5.cpp  inline_6.cpp  inline_8.cpp
examples/invoke/: CMakeLists.txt  Makefile  invoke_1.cpp  invoke_2.cpp  invoke_3.cpp
examples/nested/: CMakeLists.txt  Makefile  oneway_always_blocking_calls_oneway_always_blocking.cpp  oneway_always_blocking_calls_oneway_never_blocking.cpp  oneway_always_blocking_calls_oneway_possibly_blocking.cpp  oneway_never_blocking_calls_oneway_always_blocking.cpp  oneway_never_blocking_calls_oneway_never_blocking.cpp  oneway_never_blocking_calls_oneway_never_blocking_continuation.cpp  oneway_never_blocking_calls_oneway_possibly_blocking.cpp  oneway_possibly_blocking_calls_oneway_always_blocking.cpp  oneway_possibly_blocking_calls_oneway_never_blocking.cpp  oneway_possibly_blocking_calls_oneway_possibly_blocking.cpp  polymorphic_oneway_always_blocking_calls_oneway_always_blocking.cpp  polymorphic_oneway_always_blocking_calls_oneway_never_blocking.cpp  polymorphic_oneway_always_blocking_calls_oneway_never_blocking_continuation.cpp  polymorphic_oneway_always_blocking_calls_oneway_possibly_blocking.cpp  polymorphic_oneway_never_blocking_calls_oneway_always_blocking.cpp  polymorphic_oneway_never_blocking_calls_oneway_never_blocking.cpp  polymorphic_oneway_never_blocking_calls_oneway_never_blocking_continuation.cpp  polymorphic_oneway_never_blocking_calls_oneway_possibly_blocking.cpp  polymorphic_oneway_possibly_blocking_calls_oneway_always_blocking.cpp  polymorphic_oneway_possibly_blocking_calls_oneway_never_blocking.cpp  polymorphic_oneway_possibly_blocking_calls_oneway_possibly_blocking.cpp
examples/pipeline/: CMakeLists.txt  Makefile  pipeline.cpp
examples/properties/: CMakeLists.txt  Makefile  adapted_and_not_preferable.cpp  (+4 more)
(+162 files in other folders)
